# distributed-nano-rendering

./: LICENSE.md  README.md  distributed-nano-rendering.kdev4
.kdev4/: distributed-nano-rendering.kdev4
client/: CMakeLists.txt  README.md  bitstream.hpp  codec.hpp  config.hpp  gl.hpp  main.cpp  network.hpp  shaders.hpp  types.hpp
common/: bitstream.hpp  codec.hpp  config.hpp  protocol.hpp
server/: .gitignore  CMakeLists.txt  sdkconfig
server/main/: CMakeLists.txt  main.cpp  raycaster.hpp  raytracer.hpp  types.hpp
server/main/textures/: bluestone.hpp  colorstone.hpp  eagle.hpp  generate_all_textures.sh  generate_texture.py  greystone.hpp  mossy.hpp  purplestone.hpp  redbrick.hpp  textures.hpp  wood.hpp
test-client/: main.py
test-server/: main.py
